feat: user preferences api
